# screen-show

./: Cargo.toml
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs  screenshot.rs  shortcut.rs  tray.rs
