[package]
name = "screen-show"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
windows = { version = "0.48.0", features = ["Win32", "Win32_UI_WindowsAndMessaging"] }
